# RAG_code_search

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js  tsconfig.app.json  tsconfig.node.json  vite.config.ts  项目架构解析.md
backend/app/api/: chat.py  repos.py
backend/app/config/: defaults.py
backend/app/services/: chat_service.py  index_service.py  repo_service.py  search_service.py
backend/tests/: test_api.py  test_services.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: MarkdownMessage.tsx  RagDrawer.tsx  RagPanel.tsx
frontend/src/pages/: ChatPage.tsx  ChunksExplorer.tsx  RepoManager.tsx  SearchPlayground.tsx  SettingsPage.tsx
frontend/src/types/: index.ts
scripts/: start-macos.sh
src/backend/app/: main.py
src/backend/app/api/: chat.py  chunks.py  repos.py  search.py  settings.py
src/backend/app/config/: defaults.py  manager.py
src/backend/app/services/: chat_service.py  index_service.py  json_store.py  llm_client.py  repo_service.py  search_service.py
src/frontend/: App.tsx  index.css
src/frontend/components/: MarkdownMessage.tsx  RagDrawer.tsx  RagPanel.tsx
src/frontend/pages/: ChatPage.tsx  ChunksExplorer.tsx  RepoManager.tsx  SearchPlayground.tsx  SettingsPage.tsx
src/frontend/services/: api.ts
src/frontend/types/: index.ts
tests/backend/: conftest.py  test_api.py  test_services.py
