[project]
name = "code-knowledge-assistant"
version = "2.0.0"
description = "A code repository knowledge assistant with semantic search and chat."
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.128.0",
    "uvicorn==0.40.0",
    "starlette==0.50.0",
    "python-multipart==0.0.20",
    "openai==1.109.1",
    "chromadb==1.5.1",
    "sse-starlette==3.2.0",
    "pydantic==2.12.3",
    "pydantic-settings==2.6.1",
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "anyio==4.12.1",
    "certifi==2025.10.5",
    "idna==3.7",
    "sniffio==1.3.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==1.3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["src/backend"]
testpaths = ["tests/backend"]
